--- a/resource/path/folio/html/studyclub-webrtc.html
+++ b/resource/path/folio/html/studyclub-webrtc.html
@@ -77,7 +77,7 @@
                         <h2>링크</h2>
                         <h3>GitHub</h3>
                         <p>
-                            <a target="_blank" href="">
+                            <a target="_blank" href="https://github.com/gtypeid/study-club-webrtc.git">
                                 <img src="https://img.shields.io/badge/github-181717?style=for-the-badge&logo=github&logoColor=white">
                             </a>
                         </p>
