--- a/resource/path/folio/html/slate-winter.html
+++ b/resource/path/folio/html/slate-winter.html
@@ -86,14 +86,14 @@
                                 <img src="https://img.shields.io/badge/github-181717?style=for-the-badge&logo=github&logoColor=white">
                             </a>
                         </p>
-                        <h3>발표 PPT</h3>
+                        <h3>커리큘럼 발표 PPT</h3>
                         <p>
                             <a target="_blank" href="https://docs.google.com/presentation/d/1ZeOPq-6PRY6_joYS3ArO-okQF4NZ23CP/edit?usp=sharing&ouid=109390394369097049050&rtpof=true&sd=true">
                                 <img src="https://img.shields.io/badge/GoogleSlider-F80000?style=for-the-badge&logo=slides&logoColor=white">
                             </a>
                         </p>
 <!-- SLATE -->
-                        <h1>Slate</h1>
+                        <h1 star-p="true">Slate</h1>
                         <h2>다이어그램</h2>
                         <h3>프로세스 플로우</h3>
                         <div class="thing">
@@ -430,7 +430,7 @@
                         </div>
 <!-- SLATE END -->
 <!-- Winter -->
-                        <h1>Winter</h1>
+                        <h1 star-p="true">Winter</h1>
                         <h2>다이어그램</h2>
                         <h3>프로세스 플로우</h3>
                         <div class="thing">
