--- a/resource/path/folio/html/tetrapod.html
+++ b/resource/path/folio/html/tetrapod.html
@@ -78,7 +78,7 @@
                                 <img src="https://img.shields.io/badge/github-181717?style=for-the-badge&logo=github&logoColor=white">
                             </a>
                         </p>
-                        <h3>발표 PPT</h3>
+                        <h3>커리큘럼 발표 PPT</h3>
                         <p>
                             <a target="_blank" href="https://docs.google.com/presentation/d/1-aF2Z8AIoVJXReIrFgvFs0JuYj2NdGVTvfx_jvCfH5A/edit?usp=sharing">
                                 <img src="https://img.shields.io/badge/GoogleSlider-F80000?style=for-the-badge&logo=slides&logoColor=white">
