--- a/resource/path/folio/html/voxel.html
+++ b/resource/path/folio/html/voxel.html
@@ -14,7 +14,7 @@
                 <div class="top">
                     <div class="content">
                         <div class="blockquote" style="margin-top: 100px; margin-bottom: 100px;">
-                            <p>프로젝트의 간단한 소개, 이미지 살펴보기, 핵심 구조, 간략한 코드 언급 순으로 진행 됩니다.</p>
+                            <p>프로젝트의 간단한 소개, 이미지 살펴보기, 핵심 구조 순으로 진행 됩니다.</p>
                             <p>현재 페이지는 Voxel의 디테일 뷰 입니다.</p>
                             <p style="font-size: 1.8em; font-style: normal;">😊</p>
                         </div>
