--- a/resource/folio/slider/slider.html
+++ b/resource/folio/slider/slider.html
@@ -31,6 +31,8 @@
                 <img class="icon-img" src="/resource/path/close-button.png">
             </div>
         </div>
+        <div class="c-wrap">
+        </div>
     </div>
 </body>
 </html>
