--- a/resource/path/folio/html/studyclub-webrtc.html
+++ b/resource/path/folio/html/studyclub-webrtc.html
@@ -27,6 +27,7 @@
                             <p>팀으로서 진행된 프로젝트입니다.
                                 <br>스터디 사용자들을 모집하고 다른 서비스를 이용하러 가는 것이 아닌, 
                                 <br>현 서비스 내에서 사용자 모집 및 기능성 커뮤니티를 하나의 어플리케이션으로 확장하고 싶었습니다.
+                                <p style="color: green;">(작업 영역 없음)</p>
                             </p>
                         </div>
 
@@ -81,7 +82,7 @@
                                 <img src="https://img.shields.io/badge/github-181717?style=for-the-badge&logo=github&logoColor=white">
                             </a>
                         </p>
-                        <h3>발표 PPT</h3>
+                        <h3>커리큘럼 발표 PPT</h3>
                         <p>
                             <a target="_blank" href="https://docs.google.com/presentation/d/1X8NiNeOPEBSMGp2JbWUztfjYr_Dzy9Wv/edit?usp=sharing&ouid=109390394369097049050&rtpof=true&sd=true">
                                 <img src="https://img.shields.io/badge/GoogleSlider-F80000?style=for-the-badge&logo=slides&logoColor=white">
