--- a/resource/path/folio/html/slate-winter.html
+++ b/resource/path/folio/html/slate-winter.html
@@ -59,6 +59,9 @@
                         <p>
                             <img src="https://img.shields.io/badge/Jackson-0769AD?style=for-the-badge&logo=&logoColor=white">
                         </p>
+                        <p>
+                            <img src="https://img.shields.io/badge/matter.js-F7DF1E?style=for-the-badge&logo=matter.js&logoColor=black">
+                        </p>
 
                         <h1>살펴보기</h1>
                         <h2>이미지</h2>
