--- a/resource/folio/help-view/help-view.html
+++ b/resource/folio/help-view/help-view.html
@@ -11,7 +11,7 @@
     <div class="frame">
         <div class="zoom-view">
             <div class="img-box">
-                <img class="zoom-img" src="">
+                <img class="zoom-img" src="/resource/path/loading.gif">
             </div>
             <div class="comment-box">
                 <p class="comment">
