--- a/resource/folio/control-panel/control-panel.html
+++ b/resource/folio/control-panel/control-panel.html
@@ -11,7 +11,7 @@
     <div class="frame">
         <div class="box">
             <div class="profile-button">
-                <p class="font-p">프로필</p>
+                <p class="font-p">HELP</p>
             </div>
             <div class="curriculum-box" style="margin-right: 50px;">
                 <p class="font-p">커리큘럼</p>
