--- a/resource/folio/control-panel/control-panel.html
+++ b/resource/folio/control-panel/control-panel.html
@@ -16,9 +16,9 @@
             <div class="curriculum-box" style="margin-right: 50px;">
                 <p class="font-p">커리큘럼</p>
                 <select class="select">   
-                    <option value="all">Backend & Publisher</option>
+                    <option value="all">전부</option>
                     <option value="backend">Backend</option>
-                    <option value="publisher">Publisher</option>
+                    <option value="publisher">Publisher & GameContents</option>
                 </select>
             </div>
             <!--
