--- a/resource/path/folio/html/tetrapod.html
+++ b/resource/path/folio/html/tetrapod.html
@@ -160,6 +160,30 @@
                         </div>
                         <h3>프로세스 플로우 : 종합</h3>
                         <p>
+                            <img src="resource\path\folio\common-flow-0.png" width="60%">
+                        </p>
+                        <p>
+                            <img src="resource\path\folio\common-flow-1.png" width="60%">
+                        </p>
+                        <p>
+                            <img src="resource\path\folio\common-flow-2.png" width="60%">
+                        </p>
+                        <p>
+                            <img src="resource\path\folio\common-flow-3.png" width="60%">
+                        </p>
+                        <p>
+                            <img src="resource\path\folio\common-flow-4.png" width="60%">
+                        </p>
+                        <p>
+                            <img src="resource\path\folio\common-flow-5.png" width="60%">
+                        </p>
+                        <p>
+                            <img src="resource\path\folio\common-flow-6.png" width="60%">
+                        </p>
+                        <p>
+                            <img src="resource\path\folio\common-flow-7.png" width="60%">
+                        </p>
+                        <p>
                             <img src="resource\path\folio\common-0.png" width="90%">
                         </p>
                         <h3>Gradle 모듈</h3>
